--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "serialize-javascript": "^2.1.2"
   }
 }
